; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_geckousb.c___usb_sendbyte.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_geckousb.c___usb_sendbyte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8)* @__usb_sendbyte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__usb_sendbyte(i32 %0, i8 signext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8 %1, i8* %4, align 1
  %7 = load i8, i8* %4, align 1
  %8 = call i32 @_SHIFTL(i8 signext %7, i32 4, i32 8)
  %9 = or i32 45056, %8
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @__send_command(i32 %10, i32* %6)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp eq i32 %12, 1
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, 1024
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %19

19:                                               ; preds = %18, %14, %2
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @_SHIFTL(i8 signext, i32, i32) #1

declare dso_local i32 @__send_command(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
